# gafferExtensionDemo

./: .gitignore  CMakeLists.txt  README.md
include/DemoGafferExtension/: DemoSceneProcessor.h  TypeIds.h
python/DemoGafferExtension/: __init__.py
python/DemoGafferExtensionTest/: DemoSceneProcessorTest.py  __init__.py
python/DemoGafferExtensionUI/: DemoSceneProcessorUI.py  __init__.py
python/DemoGafferExtensionUITest/: DocumentationTest.py  __init__.py
resources/examples/: pinwall.gfr
src/DemoGafferExtension/: DemoSceneProcessor.cpp
src/DemoGafferExtensionModule/: DemoGafferExtensionModule.cpp
startup/gui/: examples.py  menu.py
